# memorado-malnova

./: README.md  im.bernard.Memorado.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-im.bernard.Memorado.json/: init
.flatpak-builder/checksums/: x86_64-im.bernard.Memorado.json
data/: im.bernard.Memorado.appdata.xml.in  im.bernard.Memorado.desktop.in  im.bernard.Memorado.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: __init__.py  main.py  memorado.gresource.xml  memorado.in  meson.build  place.py  place.ui  places.py  window.py  window.ui
